--- a/config.env
+++ b/config.env
@@ -1,7 +1,7 @@
 
 NODE_ENV=development
 PORT=3000
-DATABASE=mongodb+srv://huyhung:<PASSWORD>@cluster0.moxmi.mongodb.net/tours?retryWrites=true
+DATABASE=mongodb+srv://huyhung:<PASSWORD>@cluster0.moxmi.mongodb.net/weddings?retryWrites=true
 # DATABASE_LOCAL=mongodb://localhost:27017/natours
 DATABASE_PASSWORD=hung2503
 
