--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Learning node, express and mongoDB",
     "main": "app.js",
     "scripts": {
-        "startt": "nodemon server.js",
+        "start": "nodemon server.js",
         "start:prod": "NODE_ENV=production nodemon server.js",
         "debug": "ndb server.js",
         "watch:js": "parcel watch ./public/js/index.html --out-dir ./public/js --out-file bundle.js --public-url .",
