--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
     "description": "Learning node, express and mongoDB",
     "main": "app.js",
     "scripts": {
-        "start": "nodemon server.js",
+        "start": "nodemon server.js && nodemon dist/index.js",
         "start:prod": "NODE_ENV=production nodemon server.js",
         "debug": "ndb server.js",
+        "build": "babel index.js -d dist",
         "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js --public-url .",
         "build:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js --public-url ."
     },
@@ -16,6 +17,7 @@
         "@babel/polyfill": "^7.12.1",
         "axios": "^0.26.0",
         "bcryptjs": "^2.4.3",
+        "body-parser": "^1.20.0",
         "cookie-parser": "^1.4.6",
         "dotenv": "^7.0.0",
         "express": "^4.16.4",
@@ -25,7 +27,7 @@
         "hpp": "^0.2.2",
         "html-to-text": "^8.1.0",
         "jsonwebtoken": "^8.5.1",
-        "method-override": "^   3.0.0",
+        "method-override": "^3.0.0",
         "mongoose": "^5.5.2",
         "morgan": "^1.9.1",
         "multer": "^1.4.4",
@@ -38,6 +40,9 @@
         "xss-clean": "^0.1.1"
     },
     "devDependencies": {
+        "@babel/cli": "^7.17.10",
+        "@babel/core": "^7.17.10",
+        "@babel/preset-env": "^7.17.10",
         "eslint-config-airbnb": "^17.1.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-prettier": "^4.1.0",
