--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "morgan": "^1.9.1",
         "multer": "^1.4.4",
         "nodemailer": "^6.1.1",
+        "nodemon": "^2.0.16",
         "pug": "^3.0.2",
         "sharp": "^0.30.1",
         "slugify": "^1.3.4",
