--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.0",
         "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
         "dotenv": "^7.0.0",
         "express": "^4.16.4",
         "express-mongo-sanitize": "^1.3.2",
