--- a/config.env
+++ b/config.env
@@ -14,8 +14,8 @@ EMAIL_PASSWORD=d005200c38a014
 EMAIL_HOST=smtp.mailtrap.io
 EMAIL_PORT=2525
 
-EMAIL_FROM_ADDRESS=huyhung@iesschool.edu.vn
-EMAIL_FROM_NAME=ha huy hung
+EMAIL_FROM_ADDRESS=baoanh@tdtu.edu.vn
+EMAIL_FROM_NAME= TranBaoAnh
 SENDGRID_USERNAME=apikey
 SENDGRID_PASSWORD=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
 
